<resources>
    <string name="app_name">Pixiv</string>
    <string name="edit_account">pixiv ID或邮箱地址</string>
    <string name="edit_password">密码:</string>
    <string name="button_login">登陆</string>
    <string name="remember_password">记住密码</string>
    <string name="logo">Logo</string>
    <string name="following">关注者</string>
    <string name="recommend_user">推荐用户</string>
    <string name="favorite">收集</string>
    <string name="hot_tags">热门标签</string>
    <string name="view_history">浏览记录</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="not_login">未登录</string>
    <string name="not_auth_email">未绑定邮箱</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recommend">推荐</string>
    <string name="discovery">发现</string>
    <string name="mine">我的</string>
    <string name="search">search</string>
    <string name="download">下载原图</string>
    <string name="clear_view_history">清空浏览记录</string>
    <string name="signOut">注销</string>
    <string name="search_target">搜索对象</string>
    <string name="sort">排序方式</string>
    <string name="screen">筛选</string>
    <string name="partial_match_for_tags">与标签部分一致</string>
    <string name="exact_match_for_tags">与标签完全一致</string>
    <string name="title_and_caption">匹配标题或说明文字</string>

    <string name="_500user">500users入り</string>
    <string name="_1000user">1000users入り</string>
    <string name="_2000user">2000users入り</string>
    <string name="_5000user">5000users入り</string>
    <string name="_10000user">10000users入り</string>
    <string name="_50000user">50000users入り</string>
    <string name="no_screen">不筛选</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>


</resources>
