<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/search_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
            app:title="搜索设置"
            app:titleTextColor="@color/white" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/eight_dip"
            android:layout_marginTop="@dimen/sixteen_dip"
            android:text="@string/search_target"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/search_target"
            android:layout_marginTop="@dimen/eight_dip"
            android:layout_marginStart="@dimen/sixteen_dip"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/partial_match_for_tags"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/partial_match_for_tags" />

            <RadioButton
                android:id="@+id/exact_match_for_tags"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/exact_match_for_tags"/>

            <RadioButton
                android:id="@+id/title_and_caption"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/title_and_caption"/>

        </RadioGroup>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/line1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/eight_dip"
            android:layout_marginTop="@dimen/sixteen_dip"
            android:text="@string/screen"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/screen"
            android:layout_marginTop="@dimen/eight_dip"
            android:layout_marginStart="@dimen/sixteen_dip"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/no_screen"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/no_screen"/>

            <RadioButton
                android:id="@+id/_500user"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/_500user" />

            <RadioButton
                android:id="@+id/_1000user"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/_1000user"/>

            <RadioButton
                android:id="@+id/_2000user"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/_2000user"/>

            <RadioButton
                android:id="@+id/_5000user"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/_5000user"/>

            <RadioButton
                android:id="@+id/_10000user"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/_10000user"/>

            <RadioButton
                android:id="@+id/_50000user"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/_50000user"/>

        </RadioGroup>


    </LinearLayout>


</android.support.constraint.ConstraintLayout>